# quad

./: .gitignore  default.nix  quad.cabal  shell.nix
src/: Core.hs  Docker.hs  Runner.hs  Socket.hs
test/: Spec.hs
