cabal-version:  2.4
name:           quad
version:        0.0.0

library quad-core
  exposed-modules:
      Core
      Docker
      Socket
  default-extensions:
      BlockArguments
      DeriveAnyClass
      DeriveGeneric
      LambdaCase
      NoImplicitPrelude
      OverloadedStrings
      StrictData
  build-depends:
      base ^>=4.14
    , aeson
    , async
    , butcher
    , hslogger
    , http-client
    , http-conduit
    , http-types
    , lens
    , lens-aeson
    , network
    , record-hasfield
    , rio
    , scotty
    , serialise
    , stm
    , time
    , typed-process
    , wai-cors
    , yaml
  hs-source-dirs:
      src
  default-language: Haskell2010
  build-tool-depends: record-dot-preprocessor:record-dot-preprocessor
  ghc-options: -F -pgmF=record-dot-preprocessor

executable quad
  main-is: Main.hs
  hs-source-dirs:
      app
  default-extensions:
      BlockArguments
      DeriveAnyClass
      DeriveGeneric
      LambdaCase
      NoImplicitPrelude
      OverloadedStrings
      StrictData
  build-depends:
      base ^>=4.14
    , quad-core
    , rio
  default-language: Haskell2010

test-suite quad-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  default-extensions:
      BlockArguments
      DeriveAnyClass
      DeriveGeneric
      LambdaCase
      NoImplicitPrelude
      OverloadedStrings
      StrictData
  build-depends:
      base ^>=4.14
    , hspec
    , quad-core
    , aeson
    , async
    , butcher
    , hslogger
    , http-client
    , http-conduit
    , http-types
    , network
    , record-hasfield
    , rio
    , scotty
    , serialise
    , stm
    , time
    , typed-process
    , wai-cors
    , yaml
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -F -pgmF=record-dot-preprocessor
