cabal-version:  3.0
name:           quad
version:        0.0.0

common common
  default-extensions:
      BlockArguments
      DeriveAnyClass
      DeriveGeneric
      LambdaCase
      NoImplicitPrelude
      OverloadedStrings
      StrictData
  build-depends:
      base ^>=4.14
    , aeson
    , async
    , butcher
    , hslogger
    , http-client
    , http-conduit
    , http-types
    , lens
    , lens-aeson
    , network
    , record-hasfield
    , rio
    , scotty
    , serialise
    , stm
    , time
    , typed-process
    , wai-cors
    , yaml
  default-language: Haskell2010
  build-tool-depends: record-dot-preprocessor:record-dot-preprocessor
  ghc-options: -F -pgmF=record-dot-preprocessor

library quad-core
  import:
      common
  exposed-modules:
      Core
      Docker
      Runner
      Socket
  hs-source-dirs:
      src

executable quad
  import:
      common
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends:
      base ^>=4.14
    , quad-core
    , rio

test-suite quad-test
  import:
      common
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs:
      test
  build-depends:
      base ^>=4.14
    , hspec
    , quad-core